# vscode-cmake-hello

./: README.md
gitignore/: CMakeLists.txt
gitignore/hello/: CMakeLists.txt
gitignore/hello/src/: hello.cpp
gitignore/tests/: hellotests.cpp
part1/: CMakeLists.txt
part1/apps/: CMakeLists.txt
part1/hello/: CMakeLists.txt
shared_libs/: CMakeLists.txt
shared_libs/apps/: main.cpp
shared_libs/hello/: CMakeLists.txt
testing/: CMakeLists.txt
testing/apps/: CMakeLists.txt
testing/hello/: CMakeLists.txt
testing/hello/include/: hello.h
testing/tests/: CMakeLists.txt
